--- a/config/xp/base.yaml
+++ b/config/xp/base.yaml
@@ -1,11 +1,9 @@
 # @package _global_
-
+​
 paths:
-    natl_gf_5nads: data/natl_gf_w_5nadirs.nc
-    enatl_gf_5nads: ../sla-data-registry/qdata/enatl_wo_tide.nc
-
-domain: ???
-
+    GT: /DATASET/turbidity_bbp/GT_FrMedCoast_log10_2007to2021_.nc
+    patch: /DATASET/turbidity_bbp/Obs_patch50_FrMedCoast_log10_2007to2021_.nc
+​
 trainer:
   _target_: pytorch_lightning.Trainer
   inference_mode: False
@@ -17,86 +15,63 @@ trainer:
     save_dir: ${hydra:runtime.output_dir}
     name: ${hydra:runtime.choices.xp}
     version: ''
-  max_epochs: 150
+  max_epochs: 15
   callbacks:
     - _target_: src.versioning_cb.VersioningCallback
     - _target_: pytorch_lightning.callbacks.LearningRateMonitor
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
-      monitor: val_mse
-      save_top_k: 3
-      filename: '{val_mse:.5f}-{epoch:03d}'
-
+      monitor: val_rmse
+      save_top_k: 10
+      filename: '{val_rmse:.4f}-{epoch:03d}'
+​
 datamodule:
   _target_: src.data.BaseDataModule
   input_da: 
-    _target_: src.utils.load_altimetry_data
-    path: ${paths.natl_gf_5nads}
+    _target_: src.utils.load_bbp_data
+    path1: ${paths.GT}
+    path2: ${paths.patch}
   domains:
     train:
-      time: {_target_: builtins.slice, _args_: ['2013-02-24', '2013-09-30']}
+      time: {_target_: builtins.slice, _args_: ['2019-01-01', '2019-10-10']}
     val: 
-      time: {_target_: builtins.slice, _args_: ['2012-12-15', '2013-02-24']}
+      time: {_target_: builtins.slice, _args_: ['2020-02-04', '2020-03-31']}
     test: 
-      time: {_target_: builtins.slice,  _args_: ['2012-10-01', '2012-12-20']}
+      time: {_target_: builtins.slice,  _args_: ['2021-02-09', '2021-06-30']}
   xrds_kw:
     patch_dims: { time: 15, lat: 240, lon: 240}
-    strides: { time: 1, lat: 200, lon: 200}
-    domain_limits: ${domain.train}
+    strides: { time: 1, lat: 240, lon: 240}
   dl_kw: {batch_size: 4, num_workers: 1}
-  aug_kw:
-    aug_factor: 2
-    aug_only: True
-
+  aug_factor: 2
+  aug_only: True
+​
 model:
   _target_: src.models.Lit4dVarNet
-  persist_rw: False
   opt_fn:
     _target_: src.utils.cosanneal_lr_adam
     _partial_: true
     lr: 1e-3
-    T_max: ${trainer.max_epochs}
+    T_max: 175
   rec_weight:
       _target_: src.utils.get_triang_time_wei
       patch_dims: ${datamodule.xrds_kw.patch_dims}
-      crop: {time: 0, lat: 20, lon: 20}
-      offset: 1
+      crop: {time: 0, lat: 0, lon: 0}
   solver: 
     _target_: src.models.GradSolver
     n_step: 10
-    lr_grad: 1e3
-    # lr_grad: 0.2
+    lr_grad: 0.2
     prior_cost: 
       _target_: src.models.BilinAEPriorCost
       dim_in: ${datamodule.xrds_kw.patch_dims.time}
       dim_hidden: 32
-      bilin_quad: False
-      # bilin_quad: True
-      downsamp: 2
+      downsamp: None
     obs_cost: 
       _target_: src.models.BaseObsCost
     grad_mod: 
       _target_: src.models.ConvLstmGradModel
       dim_in: ${datamodule.xrds_kw.patch_dims.time}
       dim_hidden: 48
-  test_metrics: ${metrics.test_metrics}
-  pre_metric_fn: 
-        _target_: xarray.Dataset.sel
-        _partial_: True
-        time: {_target_: builtins.slice, _args_: ["2012-10-22", "2012-12-02"]}
-        lat: ${domain.test.lat}
-        lon: ${domain.test.lon}
-
-metrics:
-  nrmse_scores: {_target_: src.utils.rmse_based_scores_from_ds, _partial_: True}
-  psd_scores: {_target_: src.utils.psd_based_scores_from_ds, _partial_: True}
-  get0: {_target_: operator.itemgetter, _args_: [0]}
-  get1: {_target_: operator.itemgetter, _args_: [1]}
-  test_metrics:
-    'mu': {_target_: src.utils.pipe, _partial_: true, fns: ['${metrics.nrmse_scores}', '${metrics.get0}']}
-    'sig': {_target_: src.utils.pipe, _partial_: true, fns: ['${metrics.nrmse_scores}', '${metrics.get1}']}
-    'lx': {_target_: src.utils.pipe, _partial_: true, fns: ['${metrics.psd_scores}', '${metrics.get0}']}
-    'lt': {_target_: src.utils.pipe, _partial_: true, fns: ['${metrics.psd_scores}', '${metrics.get1}']}
-
+​
+​
 entrypoints:
   - _target_: pytorch_lightning.seed_everything
     seed: 333
@@ -104,8 +79,8 @@ entrypoints:
     trainer: ${trainer}
     lit_mod: ${model}
     dm: ${datamodule}
-
-defaults:
-  - /domain: gf
-  - _self_
-
+    test_fn:
+      _target_: src.utils.diagnostics
+      _partial_: true
+      test_domain:
+        time: {_target_: builtins.slice, _args_: ["2021-02-09", "2021-06-30"]}
