--- a/config/xp/base.yaml
+++ b/config/xp/base.yaml
@@ -20,9 +20,9 @@ trainer:
     - _target_: src.versioning_cb.VersioningCallback
     - _target_: pytorch_lightning.callbacks.LearningRateMonitor
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
-      monitor: val_rmse
+      monitor: val_mse
       save_top_k: 10
-      filename: '{val_rmse:.4f}-{epoch:03d}'
+      filename: '{val_mse:.4f}-{epoch:03d}'
 ​
 datamodule:
   _target_: src.data.BaseDataModule
