--- a/config/xp/base_test.yaml
+++ b/config/xp/base_test.yaml
@@ -1,16 +1,15 @@
-#"""this configuration is used for testing phase when you already finished your training phase and want to use one of the best weight (best model parameters)
-# to predict/reconstruct/inference on a different dataset.
+# @package _global_
 
 #You need to change:
 #- paths.patch to point to the directory of your new test set
 #- ckpt_path to point to the weight (the deep learning model's parameters) you want to use for this prediction
-#"""
-
-# @package _global_
+#-change ckpt_path and time period for test
 
 paths:
-    GT: data/GT_2015to2018_log10.nc
-    patch: data/Obs_patch_2015to2018_log10.nc
+    # #for testing with satellite imgae
+    GT: data/GT_Delft3D__plus50_divided10_log10.nc
+    patch: data/Obs_patch_Delft3D_2016to2018.nc
+
 
 trainer:
   _target_: pytorch_lightning.Trainer
@@ -23,13 +22,13 @@ trainer:
     save_dir: ${hydra:runtime.output_dir}
     name: ${hydra:runtime.choices.xp}
     version: ''
-  max_epochs: 150
+  max_epochs: 100
   callbacks:
     - _target_: src.versioning_cb.VersioningCallback
     - _target_: pytorch_lightning.callbacks.LearningRateMonitor
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
       monitor: val_mse
-      save_top_k: 3
+      save_top_k: 1
       filename: '{val_mse:.4f}-{epoch:03d}'
 
 datamodule:
@@ -44,7 +43,7 @@ datamodule:
     val: 
       time: {_target_: builtins.slice, _args_: ['2017-01-01', '2017-12-31']}
     test: 
-      time: {_target_: builtins.slice,  _args_: ['2018-01-01', '2018-12-31']}
+      time: {_target_: builtins.slice,  _args_: ['2017-01-01', '2017-12-31']}
   xrds_kw:
     patch_dims: { time: 15, lat: 240, lon: 300}
     strides: { time: 1, lat: 240, lon: 300}
@@ -83,8 +82,9 @@ model:
 entrypoints:
   - _target_: pytorch_lightning.seed_everything
     seed: 333
-  - _target_: src.train.base_training
+  # - _target_: src.train.base_training
+  - _target_: src.test.base_test
     trainer: ${trainer}
     lit_mod: ${model}
     dm: ${datamodule}
-    ckpt_path: "outputs/2023-10-09/10-34-36/base/checkpoints/val_mse=45.0448-epoch=144.ckpt" #change this path to the chosen weight
+    ckpt_path: "outputs/val_mse=45.0448-epoch=144.ckpt"
