--- a/config/xp/base.yaml
+++ b/config/xp/base.yaml
@@ -1,8 +1,8 @@
 # @package _global_
 
 paths:
-    GT: data/GT_2015to2018_log10.nc
-    patch: data/Obs_patch_2015to2018_log10.nc
+    GT: data/GT_2015to2018_log10.nc #path to the Grouth Truth data
+    patch: data/Obs_patch_2015to2018_log10.nc #path to the Observation data (i.e, the gappy data)
 
 trainer:
   _target_: pytorch_lightning.Trainer
@@ -15,13 +15,13 @@ trainer:
     save_dir: ${hydra:runtime.output_dir}
     name: ${hydra:runtime.choices.xp}
     version: ''
-  max_epochs: 150
+  max_epochs: 150 #the number of training epochs
   callbacks:
     - _target_: src.versioning_cb.VersioningCallback
     - _target_: pytorch_lightning.callbacks.LearningRateMonitor
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
       monitor: val_mse
-      save_top_k: 3
+      save_top_k: 3 #the number of saved weights, 3 means 3 weights at which we got best (smallest) loss are saved
       filename: '{val_mse:.4f}-{epoch:03d}'
 
 datamodule:
@@ -32,14 +32,14 @@ datamodule:
     path2: ${paths.patch}
   domains:
     train:
-      time: {_target_: builtins.slice, _args_: ['2015-01-01', '2016-12-31']}
+      time: {_target_: builtins.slice, _args_: ['2015-01-01', '2016-12-31']}#training domains
     val: 
-      time: {_target_: builtins.slice, _args_: ['2017-01-01', '2017-12-31']}
+      time: {_target_: builtins.slice, _args_: ['2017-01-01', '2017-12-31']}#validation domains
     test: 
-      time: {_target_: builtins.slice,  _args_: ['2018-01-01', '2018-12-31']}
+      time: {_target_: builtins.slice,  _args_: ['2018-01-01', '2018-12-31']}#test domains
   xrds_kw:
-    patch_dims: { time: 15, lat: 240, lon: 300}
-    strides: { time: 1, lat: 240, lon: 300}
+    patch_dims: { time: 15, lat: 240, lon: 300}#here time is dimension of temporal interpolation, for reconstruction, time=from 5 to 15 is ok, the higher is the better but cost more memory, longtitude ans latitude is dimension of the 2D image
+    strides: { time: 1, lat: 240, lon: 300}#disregard this time, you don't need to change the time here
   dl_kw: {batch_size: 16, num_workers: 1}
   aug_factor: 1
   aug_only: True
@@ -79,8 +79,4 @@ entrypoints:
     trainer: ${trainer}
     lit_mod: ${model}
     dm: ${datamodule}
-#    test_fn:
-#      _target_: src.utils.diagnostics
-#      _partial_: true
-#      test_domain:
-#        time: {_target_: builtins.slice, _args_: ["2021-02-09", "2021-06-30"]}
+
