--- a/config/xp/base_SCHISM.yaml
+++ b/config/xp/base_SCHISM.yaml
@@ -1,8 +1,11 @@
 # @package _global_
-
+#change patch (line 5-15, choose one the three options), trainer vs tester (base_test line 88-89) and ckpt_path (line 93, comment it if you use training phase)
+#change #training epochs, period of train/val/test
 paths:
-    GT: data/GT_2015to2018_log10.nc #path to the Grouth Truth data
-    patch: data/Obs_patch_2015to2018_log10.nc #path to the Observation data (i.e, the gappy data)
+    #for training
+    GT: data/data_cropped_SCHISM_Nga.nc
+    patch: data/Obs_patch_SCHISM_Nga.nc
+
 
 trainer:
   _target_: pytorch_lightning.Trainer
@@ -14,32 +17,32 @@ trainer:
     _target_: pytorch_lightning.loggers.CSVLogger
     save_dir: ${hydra:runtime.output_dir}
     name: ${hydra:runtime.choices.xp}
-    version: ''
-  max_epochs: 150 #the number of training epochs
+    version: 'SCHISM_Nga_30eps'
+  max_epochs: 30
   callbacks:
     - _target_: src.versioning_cb.VersioningCallback
     - _target_: pytorch_lightning.callbacks.LearningRateMonitor
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
       monitor: val_mse
-      save_top_k: 3  #the number of saved weights, 3 means 3 weights at which we got best (smallest) loss are saved
+      save_top_k: 1
       filename: '{val_mse:.4f}-{epoch:03d}'
 
 datamodule:
-  _target_: src.data_online_observation.BaseDataModule
+  _target_: src.data.BaseDataModule
   input_da: 
     _target_: src.utils.load_bbp_data
     path1: ${paths.GT}
     path2: ${paths.patch}
   domains:
     train:
-      time: {_target_: builtins.slice, _args_: ['2015-01-01', '2016-12-31']}#training domains
+      time: {_target_: builtins.slice, _args_: ['2020-01-02', '2020-09-30']}
     val: 
-      time: {_target_: builtins.slice, _args_: ['2017-01-01', '2017-12-31']}#validation domains
+      time: {_target_: builtins.slice, _args_: ['2020-10-01', '2020-11-26']}
     test: 
-      time: {_target_: builtins.slice,  _args_: ['2018-01-01', '2018-12-31']}#test domains
+      time: {_target_: builtins.slice,  _args_: ['2020-10-01', '2020-11-26']}
   xrds_kw:
-    patch_dims: { time: 15, lat: 240, lon: 300} #here time is dimension of temporal interpolation, for reconstruction, time=from 5 to 15 is ok, the higher is the better but cost more memory, longtitude ans latitude is dimension of the 2D image
-    strides: { time: 1, lat: 240, lon: 300} #disregard this time, you don't need to change the time here
+    patch_dims: { time: 15, lat: 240, lon: 300}
+    strides: { time: 1, lat: 240, lon: 300}
   dl_kw: {batch_size: 16, num_workers: 1}
   aug_factor: 1
   aug_only: True
@@ -76,7 +79,8 @@ entrypoints:
   - _target_: pytorch_lightning.seed_everything
     seed: 333
   - _target_: src.train.base_training
+  # - _target_: src.test.base_test
     trainer: ${trainer}
     lit_mod: ${model}
     dm: ${datamodule}
-
+    # ckpt_path: "outputs/2023-10-09/10-34-36/base/checkpoints/val_mse=45.0448-epoch=144.ckpt"
