--- a/environment.yaml
+++ b/environment.yaml
@@ -8,6 +8,7 @@ dependencies:
   - pytorch::pytorch=2.0
   - pytorch::pytorch-cuda=11.7
   - pytorch-lightning=2.0
+  - cuda-version=11.7
   - pyinterp
   - xarray
   - dask
